# docs/swagger.json
@@ -42,6 +42,31 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete a issue by its identifier.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Issues"
+                ],
+                "summary": "Delete issue",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "Issue ID",
+                        "name": "issueId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Issue deleted"
+                    }
+                }
             }
         },
         "/projects": {
@@ -167,7 +192,7 @@
                     }
                 ],
                 "responses": {
-                    "204": {
+                    "200": {
                         "description": "Project deleted"
                     }
                 }
